Doesn't work button "." of the main part keyboard. (rot,loc,scal function) #39330

Closed
opened 2014-03-21 19:25:18 +01:00 by Alexander KHozyashev · 9 comments

Ubuntu 12.04 (mint)

Broken: (example: 2.70 3406ef8)
Worked: (2.69)

Doesn't work button "." of the main part keyboard when try move, or scale or rotate object with value like this - 0.3; 0,14. Integer value is working correct.
Button "." on numpad work well.
Not pleasantly bug, especially for newbies.

Ubuntu 12.04 (mint) Broken: (example: 2.70 3406ef8) Worked: (2.69) Doesn't work button "." of the main part keyboard when try move, or scale or rotate object with value like this - 0.3; 0,14. Integer value is working correct. Button "." on numpad work well. Not pleasantly bug, especially for newbies.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AleksandrKhozyashev

Added subscriber: @AleksandrKhozyashev

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Hi, committed a possible fix for that in 4acb57a7a7 .

However I don't have a malfunctioning keyboard layout here so could you test a build from builder.blender.org/download/ in 1-2 days and verify if everything works?

Hi, committed a possible fix for that in 4acb57a7a7cf33fb1c6c . However I don't have a malfunctioning keyboard layout here so could you test a build from builder.blender.org/download/ in 1-2 days and verify if everything works?

Yeah, ty

Yeah, ty

Added subscriber: @mont29

Added subscriber: @mont29

@Psy-Fi 99.99% sure this will fix this issue (and curse OSs that replace the dot by a comma, this is a major PITA!).

@Psy-Fi 99.99% sure this will fix this issue (and curse OSs that replace the dot by a comma, this is a major PITA!).
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-03-21 21:11:03 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It's working, thanks.

It's working, thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39330
No description provided.