Possible fix for T39330 period key is ignored in transform operations

Not 100% certain if this fixes, I will ask the user to verify through
buildbot.